<resources>
    <string name="app_name">InsertDataFirebaseDemo</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="insert_data">Insert Data</string>
    <string name="email">Email</string>
    <string name="current_email">Please enter current email</string>
    <string name="password">Password</string>
    <string name="current_password">Please enter 6 value</string>
    <string name="name">Name</string>
    <string name="insert">Insert</string>
    <string name="UpdateData">Update Data</string>
    <string name="update">Update Data</string>
    <string name="read_data">Read Data</string>
    <string name="data_not_found">Data Not Found!!</string>
</resources>